--- a/Home work part 2/index.html
+++ b/Home work part 2/index.html
@@ -156,8 +156,10 @@
         <p class="t_padval">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
         <p class="subs">SUBSCRIBE </p>
         <p class="subs_2"> FOR OUR NEWLETTER AND PROMOTION </p>
-        <input type="email" class="email" placeholder="Enter Your Email">
-        <button class="subs_knopka">Subscribe</button>
+        <form action="#">
+            <input type="email" class="email" placeholder="Enter Your Email">
+            <button type="submit" class="subs_knopka">Subscribe</button>
+        </form>
     </div>
 
     <div>
